@@ -5,6 +5,9 @@ debhelper (7.2.11) UNRELEASED; urgency=low
   * dh_auto_configure: Add --skipdeps when running Makefile.PL,
     to prevent Module::Install from trying to download dependencies.
     Closes: #528235
+  * Support debian/foo.os files to suppliment previous debian/foo.arch
+    file support. Closes: #494914
+    (Thanks, Aurelien Jarno)
 
  -- Joey Hess <joeyh@debian.org>  Mon, 11 May 2009 14:50:33 -0400
 
